<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="30dp">

    <Button
        android:tag="whatiscomputer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1_text"
        android:background="@null"
        android:onClick="click"
        android:drawableTop="@raw/pc"/>
</android.support.v7.widget.CardView>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="30dp">

    <Button
        android:tag="problems_and_solutions"
        android:onClick="click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2_text"
        android:background="@null"
        android:drawableTop="@raw/pc"/>
</android.support.v7.widget.CardView>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="30dp">

    <Button
        android:tag="Format_Computer"
        android:onClick="click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button3_text"
        android:background="@null"
        android:drawableTop="@raw/pc"/>
</android.support.v7.widget.CardView>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:layout_marginRight="30dp">

    <Button
        android:tag="turnOff_Computer"
        android:onClick="click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button4_text"
        android:background="@null"
        android:drawableTop="@raw/pc"/>
</android.support.v7.widget.CardView>

</LinearLayout>
</ScrollView>